<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

        <kr.co.prnd.readmore.ReadMoreTextView
            android:id="@+id/txtQuote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginEnd="40dp"
            app:readMoreColor="@color/green"
            app:readMoreMaxLine="2"
            app:readMoreText="@string/read_more"
            android:text="@string/quote" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/name" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/imgDelete"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="15dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@drawable/delete_icon" />

                <ImageView
                    android:id="@+id/imgUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@drawable/pencil_edit_icon" />


            </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>