<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="?background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddQuotesActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="50dp">


            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/name"
                android:background="@drawable/search_data_corners"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                style="@style/CustomEditTextTheme"
                android:text="" />

            <EditText
                android:id="@+id/edtQuote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtName"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:hint="@string/quote"
                android:background="@drawable/search_data_corners"
                android:inputType="textMultiLine"
                android:minHeight="100dp"
                style="@style/CustomEditTextTheme"
                android:paddingStart="20dp" />

            <Button
                android:id="@+id/btnAddQuotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtQuote"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:layout_alignParentBottom="true"
                android:backgroundTint="@color/green"
                android:text="@string/add" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>